--- a/podcasts.html
+++ b/podcasts.html
@@ -73,7 +73,7 @@
           <p>Brakeing Down Security <a href="http://www.brakeingsecurity.com/">http://www.brakeingsecurity.com/</a></p>
           <p>CERT Podcast Series <a href="http://www.cert.org/podcasts/">http://www.cert.org/podcasts/</a></p>
           <p>Crypto-Gram Security Podcast <a href="http://crypto-gram.libsyn.com/">http://crypto-gram.libsyn.com/</a></p>
-          <p>Cyber Frontiers <a href="https://theaverageguy.tv/category/tagpodcasts/cyberfrontiers/">https://theaverageguy.tv/category/tagpodcasts/cyberfrontiers/</a></p>
+          <p>Cyber Frontiers <a href="https://theaverageguy.tv/category/tagpodcasts/cyberfrontiers/">https://theaverageguy.tv/cyberfrontiers/</a></p>
           <p>CyberSpeak's Podcast <a href="http://cyberspeak.libsyn.com/">http://cyberspeak.libsyn.com/</a></p>
           <p>Daily Stormcasts <a href="https://isc.sans.edu/podcast.html">https://isc.sans.edu/podcast.html</a></p>
           <p>Data Driven Security <a href="http://datadrivensecurity.info/podcast/">http://datadrivensecurity.info/podcast/</a></p>
