--- a/intermodal.html
+++ b/intermodal.html
@@ -21,12 +21,12 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Drayage, Intermodal, Maritime, and Transportation (95):</h3>
+          <h3>Drayage, Intermodal, Maritime, and Transportation (100):</h3>
           <br />
           <ul>
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
           <li><a href="intermodal.html#Blogs">Blogs and News</a> (4)</li>
-          <li><a href="intermodal.html#Docs">Documents, eBooks, Informational Resources</a> (4)</li>
+          <li><a href="intermodal.html#Docs">Documents, eBooks, Informational Resources</a> (6)</li>
           <li><a href="intermodal.html#Biz">Forming Your Indiana Trucking Business</a> (3)</li>
           <li><a href="intermodal.html#HazMat">Hazardous Material and Tanker Study Guides</a> (8)</li>
           <li><a href="intermodal.html#Magazines">Magazines</a> (16)</li>
@@ -37,7 +37,8 @@
           <li><a href="intermodal.html#GOV">US Government Sites</a> (4)</li>
           <li><a href="intermodal.html#Drayage">US Midwest Drayage Companies</a> (11)</li>
           <li><a href="intermodal.html#DryBulk">US Midwest Dry Bulk Companies</a> (1)</li>
-          <li><a href="intermodal.html#Tanker">US Midwest Tanker and Oil Companies</a> (6)</li>
+          <li><a href="intermodal.html#Tanker">US Midwest Tanker and Oil Companies</a> (7)</li>
+          <li><a href="intermodal.html#Waste">US Midwest Waste Haulers</a> (2)</li>
           </ul>
 
 	  <br /><br /><br /><br />
@@ -58,12 +59,13 @@
 
 	  <br /><br /><br /><br />
 
-	  <h3><a id="Docs">Documents, eBooks, Informational Resources (4):</h3>
+	  <h3><a id="Docs">Documents, eBooks, Informational Resources (6):</h3>
 	  <p>9 Classes of Hazardous Materials (Yellow Visor Card) <a href="docs/Nine_Classes_of_Hazardous_Materials-4-2013_508CLN.pdf">pdf</a></p>
 	  <p>Emergency Reponse Guidebook 2016 <a href="docs/ERG2016.pdf">pdf</a></p>
-	  <p>Indiana CDL Manual <a href="docs/INDIANA_CDL_Manual_July2014l.pdf">pdf</a></p>
+	  <p>Indiana CDL Manual 2014 <a href="docs/INDIANA_CDL_Manual_July2014l.pdf">pdf</a></p>
     <p>Indiana Motor Vehicle Guidebook <a href="docs/IndianaCommercialMotorVehicleGuidebook.pdf">pdf</a></p>
 	  <p>Intermodal Agent Guide v2.02 by The Evans Network of Companies <a href="docs/EvansDeliveryAgentGuideBookVer2_02.pdf">pdf</a></p>
+    <p>Interstate Truck Driver’s Guide to Hours of Service 2015 <a href="docs/Drivers_Guide_to_HOS 2015_508.pdf">pdf</a></p>
 
 	  <br /><br /><br /><br />
 
@@ -188,7 +190,8 @@
 
 	  <br /><br /><br /><br />
 
-	  <h3><a id="Tanker">US Midwest Tanker and Oil Companies (6):</h3>
+	  <h3><a id="Tanker">US Midwest Tanker and Oil Companies (7):</h3>
+    <p>Boezeman Oil <a href="http://boezemanoil.com/">http://boezemanoil.com/</a></p>
 	  <p>Good Oil Company <a href="http://goodoilcompany.com/">http://goodoilcompany.com/</a></p>
 	  <p>Kenan Advantage Group <a href="https://www.thekag.com/">https://www.thekag.com/</a></p>
 	  <p>Mansfield Energy Corp. <a href="http://mansfield.energy/">http://mansfield.energy/</a></p>
@@ -197,6 +200,12 @@
 	  <p>Trimac <a href="https://www.trimac.com/">https://www.trimac.com/</a></p>
 
 	  <br /><br /><br /><br />
+
+    <h3><a id="Waste">US Midwest Waste Haulers (2):</h3>
+    <p>MBI <a href="http://mrbults.com/">http://mrbults.com/</a></p>
+    <p>Z-Force Transportation <a href="http://www.zforcetransportation.com/">http://www.zforcetransportation.com/</a></p>
+
+    <br /><br /><br /><br />
 
 	     </div>
 	       <div id="favorites">
