--- a/ocp/members.html
+++ b/ocp/members.html
@@ -89,10 +89,9 @@
   <p>One Tech Over The Line</p>
   <h4><a href="http://techandloathing.info/category/netcasts/feed/">Ogg Feed</a></h4></li>
 
- <li><h4>TuxJam (Dead)</h4>
-  <p>TuxJam is a show by Kevie which takes a look at some of the application and distros that have been released in the open source community and mixes in a variety of music to make the show
-  both informative and entertaining.</p>
-  <h4>Ogg Feed (Dead)</h4></li>
+ <li><h4><a href="http://tuxjam.otherside.network/">TuxJam</a></h4>
+  <p>TuxJam is a show by Andrew and Kevie which takes a look at some of the application and distros that have been released in the open source community and mixes in a variety of music to make the show both informative and entertaining.  The main aim is not to promote established and popular distributions such as Ubuntu and Fedora or applications that a lot of us use everyday on our PCs such as VLC or Firefox, but instead to give some coverage to projects that are out there, still maintained but not known by a lot of Linux users.</p>
+  <h4><a href="http://tuxjam.otherside.network/?feed=podcast">Ogg Feed</a></h4></li>
   </ul>
   <br />
   <br />
