--- a/intermodal.html
+++ b/intermodal.html
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Drayage, Intermodal, Maritime, and Transportation (100):</h3>
+          <h3>Drayage, Intermodal, Maritime, and Transportation (103):</h3>
           <br />
           <ul>
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
@@ -37,7 +37,7 @@
           <li><a href="intermodal.html#GOV">US Government Sites</a> (4)</li>
           <li><a href="intermodal.html#Drayage">US Midwest Drayage Companies</a> (11)</li>
           <li><a href="intermodal.html#DryBulk">US Midwest Dry Bulk Companies</a> (1)</li>
-          <li><a href="intermodal.html#Tanker">US Midwest Tanker and Oil Companies</a> (7)</li>
+          <li><a href="intermodal.html#Tanker">US Midwest Tanker and Oil Companies</a> (10)</li>
           <li><a href="intermodal.html#Waste">US Midwest Waste Haulers</a> (2)</li>
           </ul>
 
@@ -190,11 +190,14 @@
 
 	  <br /><br /><br /><br />
 
-	  <h3><a id="Tanker">US Midwest Tanker and Oil Companies (7):</h3>
+	  <h3><a id="Tanker">US Midwest Tanker and Oil Companies (10):</h3>
     <p>Boezeman Oil <a href="http://boezemanoil.com/">http://boezemanoil.com/</a></p>
+    <p>Gemini Motor Transport <a href="https://www.loves.com/en/about-us/loves-family-of-companies/gemini-motor-transport">https://www.loves.com/~</a></p>
 	  <p>Good Oil Company <a href="http://goodoilcompany.com/">http://goodoilcompany.com/</a></p>
 	  <p>Kenan Advantage Group <a href="https://www.thekag.com/">https://www.thekag.com/</a></p>
 	  <p>Mansfield Energy Corp. <a href="http://mansfield.energy/">http://mansfield.energy/</a></p>
+    <p>MC Tank Transport, INC. <a href="https://www.mctank.com/">https://www.mctank.com/</a></p>
+    <p>Pilot Flying J <a href="https://jobs.pilotflyingj.com/driver-jobs">https://jobs.pilotflyingj.com/driver-jobs</a></p>
 	  <p>Quality Carriers Inc. <a href="https://www.qualitycarriersinc.com/">https://www.qualitycarriersinc.com/</a></p>
 	  <p>Schiber <a href="https://www.schiber.com/">https://www.schiber.com/</a></p>
 	  <p>Trimac <a href="https://www.trimac.com/">https://www.trimac.com/</a></p>
