--- a/ocp/members.html
+++ b/ocp/members.html
@@ -27,7 +27,7 @@
 <ul>
  <li><h4><a href="http://mixedsignals.ml/cnc/">Chronicles &amp; Commons</a></h4>
   <p>An internet audio show about open and Creative Commons lore that you can reuse in tabletop game design and other forms of fiction. Releases in the free Ogg Vorbis, Opus, and FAAC (.m4a) formats.</p>
-  <h4>< href="http://mixedsignals.ml/cnc/ogg.xml">Ogg Feed</a></h4></li>
+  <h4><a href="http://mixedsignals.ml/cnc/ogg.xml">Ogg Feed</a></h4></li>
 
  <li><h4>Crivins (Dead)</h4>
   <p>A Linux / FOSS show with a strong Scottish flavour hosted by ThistleWeb and Kevie. This show carries a strong language warning.</p>
