--- a/online-courses.html
+++ b/online-courses.html
@@ -21,15 +21,15 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Online Courses (62):</h3>
+          <h3>Online Courses (65):</h3>
           <br />
           <ul>
           <li><a href="online-courses.html#Cloud">Cloud Technologies</a> (1)</li>
           <li><a href="online-courses.html#Challenges">Code Challenges and Games</a> (5)</li>
           <li><a href="online-courses.html#CS">Computer Science</a> (2)</li>
           <li><a href="online-courses.html#Database">Database</a> (1)</li>
-          <li><a href="online-courses.html#DataSci">Data Science</a> (1)</li>
-          <li><a href="online-courses.html#InfoSec">Information Security</a> (8)</li>
+          <li><a href="online-courses.html#DataSci">Data Science</a> (2)</li>
+          <li><a href="online-courses.html#InfoSec">Information Security</a> (10)</li>
           <li><a href="online-courses.html#Linux">Linux</a> (1)</li>
           <li><a href="online-courses.html#Misc">Misc. Online Courses</a> (35)</li>
           <li><a href="online-courses.html#WebDev">Web Development</a> (8)</li>
@@ -64,15 +64,18 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="DataSci">Data Science</a> (1):</h3>
+          <h3><a id="DataSci">Data Science</a> (2):</h3>
           <p>DataCamp <a href="https://www.datacamp.com/">https://www.datacamp.com/</a></p>
+          <p>Dataquest <a href="https://www.dataquest.io/">https://www.dataquest.io/</a></p>
 
           <br /><br /><br /><br />
 
-          <h3><a id="InfoSec">Information Security</a> (8):</h3>
+          <h3><a id="InfoSec">Information Security</a> (10):</h3>
           <p>Concise Courses <a href="https://www.concise-courses.com/">https://www.concise-courses.com/</a></p>
           <p>Cybrary <a href="https://www.cybrary.it/">https://www.cybrary.it/</a></p>
-          <p>Metasploit Unleashed <a href="https://www.offensive-security.com/metasploit-unleashed/">https://www.offensive-security.com/metasploit-unleashed/</a></p>
+          <p>EH Academy <a href="https://academy.ehacking.net/">https://academy.ehacking.net/</a></p>
+          <p>Kali Training <a href="https://kali.training/">https://kali.training/</a></p>
+          <p>Metasploit Unleashed <a href="https://www.offensive-security.com/metasploit-unleashed/">https://www.offensive-security.com/~</a></p>
           <p>Open Security Training <a href="http://opensecuritytraining.info/">http://opensecuritytraining.info/</a></p>
           <p>PentesterAcademy <a href="http://www.pentesteracademy.com/">http://www.pentesteracademy.com/</a></p>
           <p>PenTest Laboratory <a href="http://pentestlab.org/">http://pentestlab.org/</a></p>
