--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -21,25 +21,28 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Ethical Hacking, Forensics, Infosec, PenTesting (34):</h3>
+          <h3>Ethical Hacking, Forensics, Infosec, PenTesting (40):</h3>
           <br />
           <ul>
-          <li><a href="cybersecurity.html#Blogs">Blogs, Info, News</a> (16)</li>
+          <li><a href="cybersecurity.html#Blogs">Blogs, Info, News</a> (18)</li>
           <li><a href="cybersecurity.html#DNS">DNS/IP Leak Detection</a> (2)</li>
           <li><a href="cybersecurity.html#Forums">Forums</a> (3)</li>
           <li><a href="cybersecurity.html#OTFE">On-the-fly encryption (OTFE)</a> (3)</li>
           <li><a href="cybersecurity.html#Proxy">Public Proxy IP Lists</a> (5)</li>
+          <li><a href="cybersecurity.html#Browsers">Secure Web Browsers</a> (4)</li>
           <li><a href="cybersecurity.html#Vulnerability_Databases">Vulnerability Databases, Info, News</a> (5)</li>
 
          </ul>
 
           <br /><br /><br /><br />
 
-          <h3><a id="Blogs">Blogs, Info, News</a> (16):</h3>
+          <h3><a id="Blogs">Blogs, Info, News</a> (18):</h3>
           <p>blackMORE Ops <a href="http://www.blackmoreops.com/">http://www.blackmoreops.com/</a></p>
           <p>CyberPunk <a href="https://n0where.net/">https://n0where.net/</a></p>
           <p>Darknet <a href="http://www.darknet.org.uk/">http://www.darknet.org.uk/</a></p>
+          <p>GBHackers <a href="https://gbhackers.com/">https://gbhackers.com/</a></p>
           <p>gHacks Technology News <a href="http://www.ghacks.net/">http://www.ghacks.net/</a></p>
+          <p>Hackers Arise! <a href="https://www.hackers-arise.com/">https://www.hackers-arise.com/</a></p>
           <p>Hacker Noon <a href="https://hackernoon.com/">https://hackernoon.com/</a></p>
           <p>Hacks, Mods &amp; Circuitry <a href="http://mods-n-hacks.wonderhowto.com/">http://mods-n-hacks.wonderhowto.com/</a></p>
           <p>HighOn.Coffee <a href="https://highon.coffee/">https://highon.coffee/</a></p>
@@ -81,6 +84,18 @@
           <p>idcloak <a href="http://www.idcloak.com/proxylist/proxy-list.html">http://www.idcloak.com/proxylist/proxy-list.html</a></p>
           <p>Nova Proxy <a href="http://www.proxynova.com/proxy-server-list/">http://www.proxynova.com/proxy-server-list/</a></p>
           <p>SamAir <a href="http://samair.ru/">http://samair.ru/</a></p>
+
+          <br /><br /><br /><br />
+
+          <h3><a id="Browsers">Secure Web Browsers</a> (4):</h3>
+          <br />
+          <p><a href="https://brave.com/">Brave</a> is open source, and built by a team of privacy focused, performance oriented pioneers of the web, founded by the inventor of Javascript and co-founder of Mozilla.</p>
+          <br />
+          <p><a href="https://www.comodo.com/home/browsers-toolbars/browser.php">Dragon</a> by Comodo is a fast and versatile Internet Browser based on Chromium, with highest level of security!</p>
+          <br />
+          <p><a href="https://icedragon.comodo.com/">IceDragon</a> (based on Firefox) features privacy and performance enhancements over the Firefox core browser as well as additional features such as SiteInspector malware scanning, Comodo Secure DNS and improved social media functionality.</p>
+          <br />
+          <p><a href="https://www.torproject.org/projects/torbrowser.html.en">Tor Browser</a> lets you use Tor on Microsoft Windows, Apple MacOS, or GNU/Linux without needing to install any software. It can run off a USB flash drive, comes with a pre-configured web browser to protect your anonymity, and is self-contained (portable).</p>
 
           <br /><br /><br /><br />
 
