--- a/podcasts.html
+++ b/podcasts.html
@@ -21,14 +21,14 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Netcasts, Oggcasts, Podcasts, Webcasts (103):</h3>
+          <h3>Netcasts, Oggcasts, Podcasts, Webcasts (102):</h3>
           <br />
           <ul>
           <li><a href="podcasts.html#Automotive">Automotive, Auto Racing, Auto Repair</a> (6)</li>
           <li><a href="podcasts.html#BSD">BSD</a> (3)</li>
           <li><a href="podcasts.html#Comedy">Comedy</a> (7)</li>
-          <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (24)</li>
-          <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (12)</li>
+          <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (23)</li>
+          <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (13)</li>
           <li><a href="podcasts.html#Linux">GNU/Linux</a> (22)</li>
           <li><a href="podcasts.html#Hardware">Hardware</a> (2)</li>
           <li><a href="podcasts.htmk#Health">Health and Science</a> (1)</li>
@@ -67,11 +67,10 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (24):</h3>
+          <h3><a id="CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (22):</h3>
           <p>2600: Off the Hook <a href="http://www.2600.com/offthehook/">http://www.2600.com/offthehook/</a></p>
           <p>2600: Off the Wall <a href="http://www.2600.com/offthewall/">http://www.2600.com/offthewall/</a></p>
           <p>Brakeing Down Security <a href="http://www.brakeingsecurity.com/">http://www.brakeingsecurity.com/</a></p>
-          <p>CERT Podcast Series <a href="http://www.cert.org/podcasts/">http://www.cert.org/podcasts/</a></p>
           <p>Crypto-Gram Security Podcast <a href="http://crypto-gram.libsyn.com/">http://crypto-gram.libsyn.com/</a></p>
           <p>Cyber Frontiers <a href="https://theaverageguy.tv/category/tagpodcasts/cyberfrontiers/">https://theaverageguy.tv/cyberfrontiers/</a></p>
           <p>CyberSpeak's Podcast <a href="http://cyberspeak.libsyn.com/">http://cyberspeak.libsyn.com/</a></p>
@@ -79,11 +78,10 @@
           <p>Data Driven Security <a href="http://datadrivensecurity.info/podcast/">http://datadrivensecurity.info/podcast/</a></p>
           <p>Defensive Security Podcast <a href="http://www.defensivesecurity.org/">http://www.defensivesecurity.org/</a></p>
           <p>Finux Tech Weekly <a href="http://www.finux.co.uk/">http://www.finux.co.uk/</a></p>
-          <p>Hak5 <a href="https://hak5.org/">https://hak5.org/</a></p>
+          <p>Hak5 <a href="https://hak5.org/">https://hak5.org/</a> video only</p>
           <p>OWASP Podcast <a href="https://www.owasp.org/index.php/OWASP_Podcast">https://www.owasp.org/index.php/OWASP_Podcast</a></p>
           <p>Primal Security <a href="http://www.primalsecurity.net/">http://www.primalsecurity.net/</a></p>
-          <p>PualDotCom Security Weekly <a href="http://www.pauldotcom.com/">http://www.pauldotcom.com/</a></p>
-          <p>PVC Security <a href="http://www.pvcsec.com/">http://www.pvcsec.com/</a></p>
+          <p>PualDotCom Security Weekly <a href="http://www.pauldotcom.com/">http://www.pauldotcom.com/</a> audio, video</p>
           <p>Reboot it! <a href="http://www.rebootitpodcast.com/">http://www.rebootitpodcast.com/</a></p>
           <p>Risky Business <a href="http://risky.biz/">http://risky.biz/</a></p>
           <p>Shared Security <a href="http://sharedsecurity.net/">http://sharedsecurity.net/</a></p>
@@ -91,23 +89,24 @@
           <p>Southern Fried Security <a href="http://www.southernfriedsecurity.com/">http://www.southernfriedsecurity.com/</a></p>
           <p>The Cyber Jungle <a href="http://www.thecyberjungle.com/">http://www.thecyberjungle.com/</a></p>
           <p>The Standard Deviant Podcast <a href="http://www.thestandarddeviant.com/">http://www.thestandarddeviant.com/</a></p>
-          <p>TrustedSec <a href="https://www.trustedsec.com/podcast/">https://www.trustedsec.com/podcast/</a></p>
+          <p>TrustedSec <a href="https://www.trustedsec.com/category/trustedsec-security-podcast/">https://www.trustedsec.com/podcast/</a></p>
 
           <br /><br /><br /><br />
 
-          <h3><a id="FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (12):</h3>
+          <h3><a id="FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (13):</h3>
           <p>Bad Voltage <a href="http://www.badvoltage.org/">http://www.badvoltage.org/</a></p>
           <p>Blender Podcast <a href="http://blender-podcast.org/">http://blender-podcast.org/</a></p>
-          <p>Channel 9 <a href="https://channel9.msdn.com/">https://channel9.msdn.com/</a></p>
-          <p>CodeNewbie <a href="http://www.codenewbie.org/">http://www.codenewbie.org/</a></p>
+          <p>Channel 9 <a href="https://channel9.msdn.com/">https://channel9.msdn.com/</a> video only</p>
+          <p>CodeNewbie <a href="https://www.codenewbie.org/podcast">https://www.codenewbie.org/podcast</a></p>
           <p>Developer On Fire <a href="http://developeronfire.com/">http://developeronfire.com/</a></p>
-          <p>FLOSS Weekly <a href="https://twit.tv/shows/floss-weekly">https://twit.tv/shows/floss-weekly</a></p>
+          <p>FLOSS Weekly <a href="https://twit.tv/shows/floss-weekly">https://twit.tv/shows/floss-weekly</a> audio, video</p>
           <p>Geek Speak <a href="http://geekspeak.org">http://geekspeak.org</a></p>
           <p>Hacker Public Radio <a href="http://hackerpublicradio.org">http://hackerpublicradio.org</a></p>
           <p>Herding Code <a href="http://herdingcode.com">http://herdingcode.com</a></p>
           <p>Knightwise.com <a href="http://knightwise.com/">http://knightwise.com/</a></p>
           <p>The Change Log <a href="http://thechangelog.com">http://thechangelog.com</a></p>
           <p>The Command Line <a href="http://thecommandline.net">http://thecommandline.net</a></p>
+          <p>urandom podcast <a href="https://urandom-podcast.info/">https://urandom-podcast.info/</a></p>
 
           <br /><br /><br /><br />
 
