--- a/notes/index.html
+++ b/notes/index.html
@@ -21,7 +21,9 @@
 	     <a href="index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Notes (15):</h3>
+          <h3>Notes (19):</h3>
+          <br />
+          <p><a href="notes018.txt">notes018.txt</a> (20180225) What is my public IP address?</p>
           <br />
           <p><a href="notes017.txt">notes017.txt</a> (20171209) 2012 VW Beetle Base 2.5l CBUA Maintenance Log</p>
           <br />
