--- a/online-courses.html
+++ b/online-courses.html
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Online Courses (65):</h3>
+          <h3>Online Courses (67):</h3>
           <br />
           <ul>
           <li><a href="online-courses.html#Cloud">Cloud Technologies</a> (1)</li>
@@ -31,7 +31,7 @@
           <li><a href="online-courses.html#DataSci">Data Science</a> (2)</li>
           <li><a href="online-courses.html#InfoSec">Information Security</a> (10)</li>
           <li><a href="online-courses.html#Linux">Linux</a> (1)</li>
-          <li><a href="online-courses.html#Misc">Misc. Online Courses</a> (35)</li>
+          <li><a href="online-courses.html#Misc">Misc. Online Courses</a> (37)</li>
           <li><a href="online-courses.html#WebDev">Web Development</a> (8)</li>
           </ul>
 
@@ -90,8 +90,9 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Misc">Misc. Online Courses</a> (35):</h3>
+          <h3><a id="Misc">Misc. Online Courses</a> (37):</h3>
           <p>Alison <a href="https://alison.com/">https://alison.com/</a></p>
+          <p>Canvas Network <a href="https://www.canvas.net/">https://www.canvas.net/</a></p>
           <p>CGCircuit <a href="https://www.cgcircuit.com/">https://www.cgcircuit.com/</a></p>
           <p>ChalkStreet <a href="https://www.chalkstreet.com/">https://www.chalkstreet.com/</a></p>
           <p>Code Avengers <a href="https://www.codeavengers.com/">https://www.codeavengers.com/</a></p>
@@ -107,6 +108,7 @@
           <p>FutureLearn <a href="https://www.futurelearn.com/">https://www.futurelearn.com/</a></p>
           <p>Grok Learning <a href="https://groklearning.com/">https://groklearning.com/</a></p>
           <p>Khan Academy <a href="https://www.khanacademy.org/">https://www.khanacademy.org/</a></p>
+          <p>Leap Courses <a href="http://www.leapcourses.com/">http://www.leapcourses.com/</a></p>
           <p>LinkedIn Learning <a href="https://www.linkedin.com/learning/">https://www.linkedin.com/learning/</a></p>
           <p>Lynda.com <a href="http://www.lynda.com/">http://www.lynda.com/</a></p>
           <p>Microsoft Virtual Academy <a href="https://mva.microsoft.com/">https://mva.microsoft.com/</a></p>
